# k8s

./: README.md
daemonsets/: test-daemon.yaml
deployments/: test-server.yaml  test-server.yml
examples/: README.md
examples/account/: README.md
examples/account/account-sample/: role.yaml  rolebind.yaml  secret.yaml  serviceaccount.yaml
examples/conrollers/: README.md
examples/conrollers/daemonsets/: test-daemon.yaml
examples/extensions/kustomization/: README.md
examples/operators/: README.md
examples/operators/pod-watcher/: Cargo.toml  README.md  deploy.yaml
examples/operators/pod-watcher/src/: main.rs  server.rs
examples/operators/second-cronjob/: Cargo.toml  Dockerfile  README.md  cron_example.yaml  deploy.yaml
templates/: README.md
templates/common/: README.md
templates/common/blue-green-server/: README.md  blue.yml  green.yml  prod_service.yml  test_service.yml
templates/common/rolling-update-server/: README.md  deployment.yml  prod_service.yml
templates/common/single-pod-server/: README.md  pod.yml  service.yml
templates/eks/: README.md
templates/gcp/: README.md
templates/onpremise/: README.md
templates/onpremise/grafana/: helm-config.yaml
templates/onpremise/influxdb/: README.md  helm-config.yaml  nfs-pv.yaml
templates/onpremise/kubeadm-init/: README.md
templates/onpremise/loki/: loki-single-helm-config.yaml  nfs-pv.yaml  promtail.yaml
templates/onpremise/metallb/: README.md  address.yaml
templates/onpremise/minio/: README.md
templates/onpremise/nfs-volume/: README.md  log_daemon.yml  persistent_volume.yml  (+2 more)
(+15 files in other folders)
