[package]
name = "kube_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
kube = { version = "0.91.0", features = ["runtime", "derive", "runtime"] }
k8s-openapi = { version = "0.22.0", features = ["latest"] }
serde_json = "1.0.117"
serde = "1.0.203"
kube-derive = "0.91.0"
schemars = "0.8.21"
futures = "0.3.30"
anyhow = "1.0.86"
